# sb_keycloak_saml

./: .gitignore  README.md  docker-compose.yml  notes.md
app/: app.py  auth.py  config.py  keycloak_service.py  pyproject.toml
certs/: keycloak-server.crt.pem  keycloak-server.key.pem
keys/: idp_private_key.pem  sp_private_key.pem
realms/: IdP_realm.json  SP_realm.json  idp.json  idp_with_sp_client.json  internal.json  sp.json  sp_with_idp.json
